# Assistant

./: gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/assistant/app/: AssistantApp.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: styles.xml
core/database/: build.gradle.kts
core/database/src/main/java/com/assistant/core/database/: AppDatabase.kt
core/database/src/main/java/com/assistant/core/database/dao/: Daos.kt
core/database/src/main/java/com/assistant/core/database/entity/: Entities.kt
core/di/: build.gradle.kts
core/di/src/main/java/com/assistant/core/di/: DatabaseModule.kt
core/navigation/: build.gradle.kts
core/navigation/src/main/java/com/assistant/core/navigation/: AppNavHost.kt
core/theme/: build.gradle.kts
core/theme/src/main/java/com/assistant/core/theme/: AssistantTheme.kt  HudComponents.kt
feature/ai-chat/: build.gradle.kts
feature/ai-chat/src/main/: AndroidManifest.xml
feature/ai-chat/src/main/cpp/: CMakeLists.txt  LLMInference.cpp  LLMInference.h  llm_jni.cpp
feature/ai-chat/src/main/java/com/assistant/feature/aichat/data/: LlamaEngine.kt  ModelCatalog.kt
feature/ai-chat/src/main/java/com/assistant/feature/aichat/data/local/: Repositories.kt
feature/ai-chat/src/main/java/com/assistant/feature/aichat/data/worker/: ModelDownloadWorker.kt
feature/ai-chat/src/main/java/com/assistant/feature/aichat/di/: AiChatModule.kt
feature/ai-chat/src/main/java/com/assistant/feature/aichat/domain/usecase/: UseCases.kt
feature/ai-chat/src/main/java/com/assistant/feature/aichat/ui/: AiChatNavGraph.kt  NewChatEntryPoint.kt
feature/ai-chat/src/main/java/com/assistant/feature/aichat/ui/chat/: ChatScreen.kt  ChatViewModel.kt
feature/ai-chat/src/main/java/com/assistant/feature/aichat/ui/chatlist/: ChatListScreen.kt  ChatListViewModel.kt
feature/ai-chat/src/main/java/com/assistant/feature/aichat/ui/components/: DynamicIcon.kt
feature/ai-chat/src/main/java/com/assistant/feature/aichat/ui/model/: ModelPickerScreen.kt  ModelViewModels.kt
gradle/: libs.versions.toml
